# xagent

./: .gitignore  DESIGN.md  PRODUCT.md  agents.md
apps/agents/: README.md  alembic.ini  langgraph.json  pyproject.toml
apps/agents/alembic/: env.py
apps/agents/app/: __init__.py  main.py  security.py  settings.py
apps/agents/tests/: __init__.py  conftest.py  prompt_helpers.py  test_agent_node_trace_summary.py  test_agent_retry_policy.py  test_agent_run_envelope.py  test_agent_run_logging.py  test_agent_run_state_service.py  test_agent_runtime_integration.py  test_agent_service_runs_model.py  test_agents_settings.py  test_alembic_config.py  test_api_contract.py  test_deep_enrichment_api.py  test_deep_enrichment_graph.py  test_email_reply_agent_run_api.py  test_email_reply_auto_send_route.py  test_email_reply_draft_schema_validation.py  test_email_reply_graph_context_knowledge.py  test_email_reply_llm_drafter.py  test_email_reply_schema.py  test_extraction_grading_hard_rules.py  test_extraction_grading_report_generation.py  test_failed_case_classification.py  test_health_api.py  test_internal_api_key_auth.py  test_langgraph_studio_config.py  test_lead_cleanup_api.py  test_lead_cleanup_graph.py  test_lead_extraction_grading_api.py  test_lead_extraction_subgraph.py  test_lead_grading_subgraph.py  test_llm_client.py  test_llm_prompt_db_runtime.py  test_llm_prompt_repository.py  test_observability_snapshot.py  test_phase4_go_no_go_report.py  test_phase4_metrics.py  test_phase_agents_llm_integration.py  test_project_scaffold.py  (+7 more)
apps/api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py  settings.py
apps/api/scripts/: phase2_e2e_verification.py  seed_data.py
apps/api/tests/: test_admin_channel_risk_config_api.py  test_admin_overview_api.py  test_agent_locks.py  test_agent_observability_summary.py  test_agent_retries.py  test_agent_scheduler.py  test_agent_task_run_model.py  (+137 more)
(+870 files in other folders)
