[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-leads-agents"
version = "0.1.0"
description = "Isolated LangGraph pilot runtime for phase 3 overseas vehicle lead agents"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2",
  "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
