[project]
name = "vehicle-leads-api"
version = "0.1.0"
description = "MVP FastAPI backend for overseas vehicle procurement AI lead system"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.3",
  "redis>=5.0",
  "apscheduler>=3.11",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
